# ragrig

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  alembic.ini  docker-compose.db-port.yml  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  evaluation-diff.yml  nightly-evidence-smoke.yml  nightly.yml  sqlite-warning-check.yml  vercel-demo-deploy.yml
alembic/: env.py
alembic/versions/: 20260503_0001_phase_1a_metadata_schema.py  20260508_0002_add_document_understandings.py  20260509_0003_add_understanding_runs.py  20260509_0003_processing_profile_persistence.py  20260509_0004_add_understanding_runs.py  20260512_0005_acl_audit_events.py  20260513_0006_add_audit_event_run_item.py  20260515_0005_add_task_records.py  20260515_0006_workspace_auth_core.py  20260515_0007_task_runtime_observability.py  20260515_0008_workspace_auth_core.py  20260516_0009_knowledge_base_workspace_id.py  20260516_0010_task_retry_edges.py  20260516_0011_add_user_password_hash.py  20260516_0012_workspace_id_on_chunks_embeddings.py  20260516_0013_workspace_invitations.py  20260516_0014_p0_enterprise_security.py  20260516_0015_p2_rate_limit_retention.py  20260516_0016_p3b_feedback_multiturn.py  20260516_0017_p3c_usage_budget.py  20260517_0018_rag_quality.py  20260518_0019_parent_child_chunks.py  20260518_0020_document_summaries.py  20260518_0021_semantic_cache.py  20260518_0022_contextual_retrieval.py  20260518_0023_kb_permissions.py  20260521_0024_kg_lite.py
api/: __init__.py  index.py
docs/: SPEC-sanitizer-drift-history-summary-ci-artifact.md  SPEC-understanding-export-baseline-diff.md  SPEC-understanding-export-verify.md  architecture.md  evaluation-baseline-spec.md  getting-started.md  roadmap.md
docs/adr/: 0001-vector-backend-strategy.md  0002-database-test-strategy.md  0003-application-boundary.md  0004-external-dependency-resilience.md  README.md  template.md
docs/benchmarks/: retrieval-benchmark-baseline.json  retrieval-benchmark-baseline.manifest.json
docs/design/: multi-tenant-auth.md
docs/development/: extensions.md
docs/operations/: SPEC-sanitizer-drift-history-retention.md  auth.md  demo-graph-console-runbook.md  dependency-inventory.md  external-demo-script.md  optional-services.md  sanitizer-drift-history-spec.md  supply-chain.md  troubleshooting.md  verification.md
docs/specs/: EVI-102.md  EVI-104-phase3-acl-regression-spec.md  EVI-105.md  EVI-106-ingestion-dag-runner.md  EVI-108-operations-pack.md  EVI-110.md  EVI-111.md  EVI-120.md  EVI-124.md  EVI-129-fake-reranker-production-guard.md  EVI-130-vercel-preview-supabase.md  EVI-132-task-runtime-observability.md  EVI-133.md  EVI-134-ci-flow-optimization.md  EVI-136-task-retry-failure-recovery.md  EVI-138-ci-test-312-status.md  EVI-138-ci-test-python-312-spec.md  EVI-139-retry-multiprocess-idempotency.md  EVI-140-ci-required-contexts-drift.md  EVI-141-reranker-policy-observability.md  EVI-63.md  EVI-64.md  EVI-66.md  EVI-67.md  EVI-68.md  EVI-73.md  EVI-75.md  EVI-81.md  EVI-83.md  EVI-84-baseline-compare.md  EVI-87-sanitizer-degraded-summary.md  EVI-93-sanitizer-cross-layer-contract-spec.md  EVI-95-sanitizer-contract-matrix-spec.md  EVI-96-baseline-promote-canonicalization.md  README.md  SPEC-EVI-79-sanitizer-boundary-hardening.md  SPEC-google-workspace-source-connector.md  answer-live-smoke-diagnostics.md  evaluation-reindex-diff-spec.md  evi-60-cicd-optimization.md  (+48 more)
docs/superpowers/: README.md
examples/local-pilot/: company-handbook.md  demo-architecture.md  demo-incident.md  demo-questions.json  (+3 more)
frontend/: Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: __init__.py  advanced_parser_corpus_check.py  answer_live_smoke.py  artifact_cleanup.py  bge_rerank_smoke.py  bootstrap.py  check_required_ci_contexts.py  cost_latency_check.py  database_source_check.py  db_check.py  demo_graph_console_cleanup.py  demo_graph_console_runbook.py  demo_graph_console_smoke.mjs  demo_graph_console_smoke.py  demo_rc_gate.py  dependency_inventory.py  docker-entrypoint.sh  doctor.py  eval_baseline.py  eval_baseline_backfill_canonical.py  eval_cleanup.py  eval_config_compare.py  eval_local.py  eval_reindex_diff.py  export_object_storage.py  fileshare_check.py  generate_advanced_fixtures.py  google_workspace_diagnostics.py  graph_retrieval_eval_compare.py  index_check.py  index_local.py  ingest_check.py  ingest_local.py  knowledge_map_check.py  local_pilot_console_e2e.mjs  local_pilot_console_e2e.py  local_pilot_preflight.py  local_pilot_smoke.py  nightly_evidence_smoke.py  ops_backup.py  (+33 more)
tests/: conftest.py  test_acl.py  test_acl_regression.py  test_advanced_parsers.py  test_agent_access_sink.py  test_alembic_sql.py  test_analytics_sink.py  test_answer.py  test_answer_live_smoke.py  test_api_e2e_smoke.py  test_artifact_cleanup.py  test_auth.py  test_auth_api.py  test_auth_service.py  test_auth_throttle.py  test_azure_blob_connector.py  test_backblaze_b2_connector.py  test_bootstrap.py  test_chunk_review.py  test_chunkers.py  test_cloud_providers.py  test_cloudflare_r2_connector.py  test_cohere_embedding.py  test_conflict_detection.py  test_contextual_retrieval.py  test_cors_config.py  test_cost_latency_tracking.py  test_database_source.py  test_db_check.py  test_db_config.py  test_db_engine.py  test_db_models.py  test_db_runtime_url.py  test_db_session.py  test_demo_rc_gate.py  test_diagnostics_report.py  test_discord_source.py  test_dockerfile.py  test_doctor.py  test_document_summary.py  (+119 more)
(+413 files in other folders)
