[project]
name = "ragrig"
version = "0.1.0"
description = "RAGRig Phase 1a scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
cloud-llm = []
cloud-embeddings = []
doc-parsers = []
local-ml = [
  "FlagEmbedding>=1.3.5,<2.0.0",
  "ollama>=0.4.7,<1.0.0",
  "openai>=1.82.0,<2.0.0",
  "sentence-transformers>=3.4.1,<4.0.0",
  "torch>=2.7.0,<3.0.0",
]
vectorstores = []

[dependency-groups]
dev = [
  "cyclonedx-bom>=7.3.0",
  "httpx>=0.27.0,<1.0.0",
  "pip-audit>=2.10.0",
  "pip-licenses>=5.5.5",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragrig"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ragrig"]
omit = [
  "src/ragrig/cleaners/*",
  "src/ragrig/main.py",
  "src/ragrig/vectorstore/*",
  "src/ragrig/web_console.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["src/ragrig", "*/src/ragrig"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
