[project]
name = "ragrig"
version = "0.1.0"
description = "RAGRig Phase 1a scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "authlib>=1.3.0,<2.0.0",
  "bcrypt>=4.2.0,<6.0.0",
  "email-validator>=2.1.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ldap3>=2.9.0,<3.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pyotp>=2.9.0,<3.0.0",
  "qrcode[pil]>=7.4.0,<9.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.27",
  "pyyaml>=6.0.3",
  "pypdf>=6.10.2,<7.0.0",
  "python-docx>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
cloud-aws = [
  "boto3>=1.35.0,<2.0.0",
]
cloud-cohere = [
  "cohere>=5.15.0,<7.0.0",
]
cloud-google = [
  "google-genai>=1.0.0,<3.0.0",
  "google-cloud-aiplatform>=1.73.0,<2.0.0",
]
cloud-jina = []
cloud-openai = [
  "openai>=1.82.0,<3.0.0",
]
cloud-voyage = [
  "voyageai>=0.3.2,<1.0.0",
]
cloud-llm = []
cloud-embeddings = []
doc-parsers = [
  "python-docx>=1.1.0,<2.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "python-pptx>=1.0.0,<2.0.0",
  "pypdf>=6.10.2,<7.0.0",
]
local-ml = [
  "FlagEmbedding>=1.3.5,<2.0.0",
  "ollama>=0.4.7,<1.0.0",
  "openai>=1.82.0,<3.0.0",
  "sentence-transformers>=3.4.1,<6.0.0",
  "torch>=2.7.0,<3.0.0",
]
s3 = [
  "boto3>=1.35.0,<2.0.0",
]
parquet = [
  "pyarrow>=19.0.0,<25.0.0",
]
fileshare = [
  "httpx>=0.27.0,<1.0.0",
  "paramiko>=3.5.0,<6.0.0",
  "smbprotocol>=1.13.0,<2.0.0",
]
database-sources = [
  "pymysql>=1.1.0,<2.0.0",
]
vectorstores = [
  "qdrant-client>=1.9.0,<2.0.0",
]

[dependency-groups]
dev = [
  "cyclonedx-bom>=7.3.0",
  "httpx>=0.27.0,<1.0.0",
  "lxml>=6.1.0",
  "pip-audit>=2.10.0",
  "pip-licenses>=5.5.5",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragrig"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "unit: fast in-memory unit tests with no external dependencies",
    "integration: tests that use the database or mock external services",
    "smoke: quick smoke tests for endpoints and key workflows",
    "live: tests requiring live external services (skipped by default)",
    "slow: tests that take a noticeable amount of time",
    "optional: tests for optional features that may be skipped",
    "answer_live_smoke: live smoke tests for answer generation with local LLM (requires RAGRIG_ANSWER_LIVE_SMOKE=1)",
]
[tool.coverage.run]
source = ["src/ragrig"]
omit = [
  "src/ragrig/cleaners/*",
  "src/ragrig/main.py",
  "src/ragrig/web_console.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["src/ragrig", "*/src/ragrig"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
